<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Expense</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 	<string name="title_section1">Transaction</string>
    <string name="title_section2">Category</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="add_expense_btn">Add</string>
    <string name="cancel_expense_btn">Cancel</string>
    <string name="tsTextView">Date</string>
    <string name="amountTextView">Amount</string>
    <string name="itemTextView">Item</string>
     <string name="spinner_title">Choose One Category</string>  
</resources>
