<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_weight="0.09" >

        <TextView
            android:id="@+id/tsTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.74"
            android:gravity="center"
            android:text="@string/tsTextView"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/tsEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17"
         >

        <TextView
            android:id="@+id/itemTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.38"
            android:gravity="center"
            android:text="@string/itemTextView"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/itemEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.50"
            android:gravity="center"
            android:text="Category"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_weight="0.98"
            android:textSize="24sp"
            android:prompt="@string/spinner_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.07" >

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.38"
            android:gravity="center"
            android:text="@string/amountTextView"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:layout_weight="0.09"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" >

        <Button
            android:id="@+id/addExpenseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/add_expense_btn" />

        <Button
            android:id="@+id/cancelExpenseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/cancel_expense_btn" />
    </LinearLayout>

</LinearLayout>